istio/test-ssl/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test
  namespace: test-istio
  labels:
    app: test
spec:
  ports:
    - name: http
      port: 8000
      targetPort: 80
  selector:
    app: test
